I add the paging on person search, but I still need to fix the order