@@ -6,12 +6,17 @@ import com.personalfinancetracker.mapper.PersonMapper;
 import com.personalfinancetracker.model.PersonSpecification;
 import com.personalfinancetracker.repository.PersonRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,12 +24,11 @@ public class PersonService {
     private final PersonRepository personRepository;
     private final PersonMapper personMapper;
 
-    public List<PersonDto> searchPeople(PersonDto request) {
+    public List<PersonDto> searchPeople(PersonDto request, Pageable pageable) {
         Specification<Person> specification = PersonSpecification.search(request);
-        List<Person> people = personRepository.findAll(specification);
-        return people.stream()
-                .map(personMapper::personToPersonDto)
-                .toList();
+        PageRequest pageRequest = PageRequest.of(pageable.getPageNumber(), pageable.getPageSize(), pageable.getSortOr(Sort.by(Sort.Direction.ASC, "firstName")));
+        Page<Person> personPage = personRepository.findAll(specification, pageRequest);
+        return personPage.getContent().stream().map(personMapper::personToPersonDto).collect(Collectors.toList());
     }
 
     public void processPerson(PersonDto personDto){
